--- a/static/yaml/ta.yaml
+++ b/static/yaml/ta.yaml
@@ -1,9 +1,9 @@
+- name:     Xueying Wang
+  netid:    xwang41
+  hours:    TBD
+  location: TBD
+
 - name:     Nick Jones
   netid:    njones7
-  hours:    "TBD"
-  location: "Starbucks (La Fortune)"
-
-- name:     TBD
-  netid:    TBD
   hours:    TBD
   location: TBD
