--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -2,10 +2,10 @@
   days:
       - date:           01/17
         topics:         Introduction, Syllabus, Unix Shell
+        assignment:     Reading 00
 
       - date:           01/19
         topics:         Vagrant, Git
-        assignment:     Reading 00        
 
 - name:     Packaging
   days:
@@ -64,7 +64,8 @@
        topics:          Sprint
 
      - date:            03/07
-       topics:          Sprint
+       topics:          Tornado Templates
+       assignment:      Reading 06       
 
      - date:            03/09
        topics:          Sprint
@@ -74,11 +75,9 @@
 - name:     Project 02
   days:
      - date:            03/21
-       topics:          Tornado Templates
-       assignment:      Reading 06
-       
+       topics:          Sprint
+              
      - date:            03/23
-       topics:          Tornado Templates
        assignment:      Project 02
        items:
           - name:       Study Guide 2
@@ -88,17 +87,17 @@
   days:
      - date:            03/28
        topics:          HTML, CSS
+       assignment:      Reading 07
 
      - date:            03/30
        topics:          Bootstrap
-       assignment:      Reading 07
    
      - date:            04/04
        topics:          JavaScript
+       assignment:      Reading 08       
       
      - date:            04/06
        topics:          AJAX
-       assignment:      Reading 08
 
 - name:     Project 03 
   days:
@@ -115,7 +114,6 @@
        topics:          Review
        
      - date:            04/25
-       assignment:      Project 03
        items:
           - name:       Study Guide 3
           - name:       Quiz 3
@@ -125,7 +123,11 @@
      - date:            04/27
        topics:          Planning, Design
        assignment:      Reading 09
+
      - date:            05/02
+       topics:          Sprint
+
+     - date:            TBD
        items:
-          - name:       Project Presentations
+          - name:       Final Project Presentations
 
