--- a/static/yaml/ta.yaml
+++ b/static/yaml/ta.yaml
@@ -1,7 +1,7 @@
 - name:     Xueying Wang
   netid:    xwang41
-  hours:    TBD
-  location: TBD
+  hours:    Wed. 1:30-2:30
+  location: Cushing 212
 
 - name:     Nick Jones
   netid:    njones7
