--- a/static/yaml/resources.yaml
+++ b/static/yaml/resources.yaml
@@ -44,22 +44,20 @@
          A large and relatively complete Python distribution for large-scale
          data processing, predictive analytics, and scientific
          computing.
-   - title: Enthought Python Distribution
-     link:  http://www.enthought.com/products/epd_free.php
-     desc:  |
-         A free lightweight Python distribution geared towards scientific
-         computing.
 
-   - title: PythonXY
-     link:  http://python-xy.github.io/
+   - title: VirtualBox
+     link:  https://www.virtualbox.org
      desc:  |
-         Python(x,y) is a free scientific and engineering development software
-         for numerical computations, data analysis and data visualization.
-
-   - title: Sage Math
-     link:  http://www.sagemath.org/
+         Free software for creating and running virtual machines on your
+         personal computer.
+         
+   - title: Vagrant
+     link:  https://www.vagrantup.com
      desc:  |
-         A free open-source mathematics software system.
+         A set of scripts to easily set up and maintain virtual machines
+         from the command-line. In conjunction with VirtualBox, you can use
+         this to create carefully-controlled, virtual Linux environments 
+         for project development.
 
 - title:  References
   desc:  These are additional resources and references that may be useful.
@@ -98,12 +96,6 @@
      desc:  |
          A blog filled with tutorials and lessons on Python and its various
          libraries.
-
-   - title: Getting started with Python in HPC
-     link:  http://andy.terrel.us/blog/2012/09/27/starting-with-python/
-     desc:  |
-         A collection of links to various Python resources related to high
-         performance computing.
 
 - title: Unix
   desc:  References for navigating the command line
