--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -1,17 +1,20 @@
-- name:     Unix
+- name:     Introduction
   days:
       - date:           01/17
-        topics:         Introduction, Syllabus, Unix Shell
-        assignment:     Reading 00
+        topics:         Introduction, Syllabus, Linux Shell
+        assignment:     Homework 1
 
       - date:           01/19
         topics:         Vagrant, Git
+        items:
+           - name: Notes
+             link: http://www3.nd.edu/~cforstal/cdt-30020-sp17/notes02.html
 
 - name:     Packaging
   days:
       - date:           01/24
         topics:         Scripts, Modules
-        assignment:     Reading 01        
+        assignment:     Homework 2        
 
       - date:           01/26
         topics:         Packages
@@ -20,9 +23,9 @@
   days:
       - date:           01/31
         topics:         OOP Concepts
-        assignment:     Reading 02
+        assignment:     Homework 3
 
-- name:     Project 01
+- name:     Project 1
   days:
       - date:           02/02
         topics:         Sprint
@@ -31,75 +34,74 @@
         topics:         Sprint
 
       - date:           02/09
-        assignment:     Project 01
+        assignment:     Project 1
         items:
            - name: Study Guide 1
-           - name: Quiz 1
-
-- name:     Server-Side Programming
-  days:
-     - date:            02/14
-       topics:          HTML, HTTP
-       assignment:      Reading 03
-
-     - date:            02/16
-       topics:          Tornado
+           - name: Test 1
 
 - name:     Databases
   days:
-     - date:            02/21
+     - date:            02/14
        topics:          Databases, SQL
-       assignment:      Reading 04
+       assignment:      Homework 4
 
+     - date:            02/16
+       topics:          SQLite with Python
+
+     - date:            02/21
+       topics:          Relational databases
+       assignment:      Homework 5
+
+- name:     Server-Side Programming
+  days:
      - date:            02/23
-       topics:          Python, SQLite
+       topics:          HTTP, HTML
 
      - date:            02/28
-       topics:          Relational databases
-       assignment:      Reading 05
-
-- name:     Project 02
-  days:
+       topics:          Tornado
+       assignment:      Homework 6
+       
      - date:            03/02
-       topics:          Sprint
+       topics:          Tornado templates
 
+- name:     Project 2
+  days:
      - date:            03/07
-       topics:          Tornado Templates
-       assignment:      Reading 06       
+       topics:          Sprint
 
      - date:            03/09
        topics:          Sprint
      
 - name:     Spring Break
 
-- name:     Project 02
+- name:     Project 2
   days:
      - date:            03/21
-       topics:          Sprint
+       topics:          Review
               
      - date:            03/23
-       assignment:      Project 02
+       assignment:      Project 2
        items:
           - name:       Study Guide 2
-          - name:       Quiz 2
+          - name:       Test 2
 
 - name:     Client-Side Programming
   days:
      - date:            03/28
-       topics:          HTML, CSS
-       assignment:      Reading 07
+       topics:          HTML + CSS
+       assignment:      Homework 7
 
      - date:            03/30
        topics:          Bootstrap
    
      - date:            04/04
        topics:          JavaScript
-       assignment:      Reading 08       
+       assignment:      Homework 8       
       
      - date:            04/06
        topics:          AJAX
 
-- name:     Project 03 
+- name:     Project 3 
   days:
      - date:            04/11
        topics:          Sprint
@@ -114,15 +116,16 @@
        topics:          Review
        
      - date:            04/25
+       assignment:      Project 3
        items:
           - name:       Study Guide 3
-          - name:       Quiz 3
+          - name:       Test 3
 
 - name:     Final Project
   days:
      - date:            04/27
        topics:          Planning, Design
-       assignment:      Reading 09
+       assignment:      Homework 9
 
      - date:            05/02
        topics:          Sprint
