--- a/pages/sidebar-gitlab-setup.yaml
+++ b/pages/sidebar-gitlab-setup.yaml
@@ -39,6 +39,7 @@ body:       |
      width="80" alt="Fork"> to make your own copy
 
 
+  <a name='visibility'></a>
   ### Make your copy private
   
   1. From the Settings menu, choose "Edit Project"
