--- a/static/yaml/ta.yaml
+++ b/static/yaml/ta.yaml
@@ -5,5 +5,5 @@
 
 - name:     Nick Jones
   netid:    njones7
-  hours:    TBD
-  location: TBD
+  hours:    Wed. 5:00-7:00
+  location: Center for Digital Scholarship
