update notes end of week 2

--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -22,8 +22,8 @@
       - date:           01/26
         topics:         Packages
         items:
-           - name: Agenda
-             link: agenda04.html
+           - name: Notes
+             link: notes04.html
 
 
 - name:     Object-Oriented Programming
