week 3 - add homework3 - add projec1

--- a/pages/homework2.yaml
+++ b/pages/homework2.yaml
@@ -1,6 +1,9 @@
 title:      "Homework 2: Packaging"
 icon:       fa-book
-navigation: []
+navigation:
+    - name: "Class Home"
+      link: "/~cforstal/cdt-30020-sp17"
+      icon: "fa-home"
 internal:
 external:
 body:       |
