--- a/static/yaml/schedule.yaml
+++ b/static/yaml/schedule.yaml
@@ -2,7 +2,9 @@
   days:
       - date:           01/17
         topics:         Introduction, Syllabus, Linux Shell
-        assignment:     Homework 1
+        assignment:     
+             name: Homework 1
+             due:  01/20
 
       - date:           01/19
         topics:         Vagrant, Git
@@ -14,7 +16,10 @@
   days:
       - date:           01/24
         topics:         Scripts, Modules
-        assignment:     Homework 2
+        assignment:
+             name: Homework 2
+             due:  01/27
+        
         items:
            - name: Notes
              link: notes03.html
@@ -30,7 +35,13 @@
   days:
       - date:           01/31
         topics:         OOP Concepts
-        assignment:     Homework 3
+        assignment:
+             name: Homework 3
+             due:  02/03
+        
+        items:
+           - name: Notes
+             link: notes05.html
 
 - name:     Project 1
   days:
@@ -41,41 +52,55 @@
         topics:         Sprint
 
       - date:           02/09
-        assignment:     Project 1
+        topics:         Review
+        assignment: 
+             name: Project 1
+             due:  02/10
+
+      - date:           02/14
         items:
-           - name: Study Guide 1
+           - name: Checklist 1
+             link: checklist1.html
            - name: Test 1
+             link: test1.html
+        
 
 - name:     Databases
   days:
-     - date:            02/14
-       topics:          Databases, SQL
-       assignment:      Homework 4
-
      - date:            02/16
-       topics:          SQLite with Python
+       topics:          Databases, SQL
+       items:
+           - name: Agenda
+             link: agenda10.html
 
      - date:            02/21
+       topics:          SQLite with Python
+       assignment: 
+            name: Homework 4       
+            due:  02/24
+
+     - date:            02/23
        topics:          Relational databases
-       assignment:      Homework 5
 
 - name:     Server-Side Programming
   days:
-     - date:            02/23
-       topics:          HTTP, HTML
-
      - date:            02/28
-       topics:          Tornado
-       assignment:      Homework 6
-       
+       topics:          HTTP, HTML
+       assignment: 
+            name: Homework 5       
+            due:  03/03
+
      - date:            03/02
+       topics:          Tornado
+       
+     - date:            03/07
        topics:          Tornado templates
+       assignment: 
+            name: Homework 6       
+            due:  03/10
 
 - name:     Project 2
   days:
-     - date:            03/07
-       topics:          Sprint
-
      - date:            03/09
        topics:          Sprint
      
@@ -84,35 +109,42 @@
 - name:     Project 2
   days:
      - date:            03/21
-       topics:          Review
+       topics:          Sprint
               
      - date:            03/23
-       assignment:      Project 2
+       topics:          Review
+       assignment: 
+            name: Project 2
+            due:  03/24
+       
+     - date:            03/28
        items:
-          - name:       Study Guide 2
+          - name:       Checklist 2
           - name:       Test 2
+     
 
 - name:     Client-Side Programming
   days:
-     - date:            03/28
-       topics:          HTML + CSS
-       assignment:      Homework 7
-
      - date:            03/30
-       topics:          Bootstrap
-   
+       topics:          HTML + CSS
+
      - date:            04/04
-       topics:          JavaScript
-       assignment:      Homework 8       
-      
+       topics:          Bootstrap
+       assignment: 
+            name: Homework 7       
+            due:  04/07
+   
      - date:            04/06
+       topics:          JavaScript       
+      
+     - date:            04/11
        topics:          AJAX
+       assignment: 
+            name: Homework 8       
+            due:  04/14
 
 - name:     Project 3 
   days:
-     - date:            04/11
-       topics:          Sprint
-
      - date:            04/13
        topics:          Sprint
 
@@ -121,18 +153,23 @@
 
      - date:            04/20
        topics:          Review
+       assignment: 
+            name: Project 3
+            due:  04/21
+
        
      - date:            04/25
-       assignment:      Project 3
        items:
-          - name:       Study Guide 3
+          - name:       Checklist 3
           - name:       Test 3
 
 - name:     Final Project
   days:
      - date:            04/27
        topics:          Planning, Design
-       assignment:      Homework 9
+       assignment: 
+            name: Homework 9
+            due:  04/28
 
      - date:            05/02
        topics:          Sprint
